Initial implementation of upload request